--- a/website/src/Pages/ContactForm/ContactForm.css
+++ b/website/src/Pages/ContactForm/ContactForm.css
@@ -1,10 +1,10 @@
-.contact-form-container {
+   .contact-form-container {
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: rgba(249, 249, 249, 0.9); /* Slightly transparent background */
     border-radius: 8px;
-    box-shadow: 0 0 10px rgb(51, 51, 51)
+    box-shadow: 0 0 10px rgba(51, 51, 51, 0.5); /* Added opacity to the box shadow */
   }
   
   .contact-form-container h1 {
@@ -33,7 +33,7 @@
   .form-group textarea {
     width: 95%;
     padding: 10px;
-    border: 1px solid #777777;
+    border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
   }
@@ -55,5 +55,5 @@
   }
   
   .submit-button:hover {
-    background-color: #242424;
+    background-color: #0056b3;
   }
