--- a/website/src/CSS/Home.css
+++ b/website/src/CSS/Home.css
@@ -1,7 +1,13 @@
 /* Home.css */
 .home-container {
-  display: grid;
-  place-items: center; /* Centers both horizontally and vertically */
-  height: 0vh; /* Full viewport height */
-  text-align: center; /* Centers text inside the container */
+  background: url("../Assets/Spokane.jpeg") no-repeat center center fixed;
+  background-size: cover;
+  min-height: 100vh; /* Full viewport height */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white; /* Adjust text color for visibility */
+  text-align: center;
+  padding: 20px;
 }
