--- a/website/src/Components/TopNavBar.css
+++ b/website/src/Components/TopNavBar.css
@@ -42,3 +42,14 @@ body {
   margin: 0 8px;
   color: rgb(14, 110, 158);
 }
+
+.logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+  }
+  
+  .ieee-logo {
+    max-height: 1000px; /* Adjust the height as needed */
+  }
