[Update] = Events, Footer and Menu button
-Fixed the white block across the page from the 'menu' button
-Fixed the footer where it needs to stay at the bottom of the page

--- a/website/src/Components/LHSNav.css
+++ b/website/src/Components/LHSNav.css
@@ -2,7 +2,9 @@
 
 /* Style for the navigation container */
 .lhs-nav {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 200px;
   display: inline-block;
 }
