--- a/website/src/Pages/Admin/Admin.css
+++ b/website/src/Pages/Admin/Admin.css
@@ -46,7 +46,7 @@ body {
 }
 
 .input-icon {
-  position: relative;
+  position: absolute;
   left: 0;
   top: 0;
   color: #002855;
@@ -57,7 +57,7 @@ body {
   justify-content: center;
   width: 14px;
   height: 14px;
-  margin-right: 8px;
+  margin-right: 20px;
 }
 
 .form-group input {
