--- a/website/src/Pages/Officers/Officers.css
+++ b/website/src/Pages/Officers/Officers.css
@@ -6,10 +6,12 @@
 
 .page-title {
   text-align: center;
-  color: #002855;
-  font-size: 2.5rem;
+  color: #ffffff;
+  font-size: 5rem;
   margin-bottom: 2rem;
   font-weight: bold;
+  background-color: #002855
+
 }
 
 .officer-section {
