--- a/website/src/Pages/Admin/Admin.css
+++ b/website/src/Pages/Admin/Admin.css
@@ -7,8 +7,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(rgba(0, 40, 85, 0.8), rgba(0, 40, 85, 0.8)),
-              url('../../Assets/Spokane.jpeg') center/cover no-repeat;
+  background: url('../../Assets/Spokane.jpeg') center/cover no-repeat;
 }
 
 .login-container {
