--- a/Frontend/src/Pages/FormerOfficers/FormerOfficers.css
+++ b/Frontend/src/Pages/FormerOfficers/FormerOfficers.css
@@ -6,7 +6,7 @@
   
   .page-title {
     text-align: center;
-    color: #002855;
+    color: #fff;
     font-size: 2.5rem;
     margin-bottom: 2rem;
     font-weight: bold;
