--- a/Frontend/src/Pages/SocietyChapters/SocietyChapters.css
+++ b/Frontend/src/Pages/SocietyChapters/SocietyChapters.css
@@ -46,7 +46,6 @@ p {
     color: #ffffff;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     padding: 15px 30px;
-    border-radius: 10px;
     display: inline-block;
 }
 
@@ -136,7 +135,7 @@ p {
 }
 
 .learn-more-button {
-    background: linear-gradient(45deg, #ff6600, #ff8533);
+    background: linear-gradient(45deg, #ff6600, #fbcb39);
     border: none;
     color: white;
     padding: 10px 20px;
